--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,8 @@
     padding: 0;
 }
 
-form-container{
+.form-container{
     max-width: 500px;
-    border: solid 1px yellow;
+    border: solid 1px rgb(0, 0, 0);
+    border-radius: 15px;
 }
