--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,15 @@
     padding: 0;
 }
 
+.dark-hover{
+    cursor: pointer;
+}
+
+.dark-hover:hover{
+    filter: brightness(70%);
+    transition: 0.4s;
+}
+
 .logo-img{
     cursor: pointer;
     width: 60px
