--- a/src/styles.css
+++ b/src/styles.css
@@ -10,13 +10,13 @@
 }
 
 .dark-hover:hover{
-    filter: brightness(70%);
+    filter: blur(90%);
     transition: 0.4s;
 }
 
 .logo-img{
     cursor: pointer;
-    width: 60px
+    width: 60px;
 }
 
 .logo-img:hover{
@@ -77,3 +77,4 @@ body {
 .text-rasta-red{
     color: #C51605;
 }
+
