--- a/src/styles.css
+++ b/src/styles.css
@@ -38,6 +38,7 @@ body {
     font-optical-sizing: auto;
     font-weight: 500;
     font-style: normal;
+    /* background-color:#FD8D14; */
   }
 
 .form-container{
@@ -77,4 +78,14 @@ body {
 .text-rasta-red{
     color: #C51605;
 }
-
+.container-cart {
+    max-height: 80vh; /* Imposta un'altezza massima appropriata per il contenitore del carrello */
+    position: relative;
+}
+  
+  .container-cart > div:not(:last-child) {
+    margin-bottom: 10px; /* Aggiungi un margine inferiore a tutti gli elementi del carrello, eccetto l'ultimo */
+}
+  
+  
+  
