--- a/src/styles.css
+++ b/src/styles.css
@@ -87,5 +87,64 @@ body {
     margin-bottom: 10px; /* Aggiungi un margine inferiore a tutti gli elementi del carrello, eccetto l'ultimo */
 }
   
+/*Stile Footer*/
+
+.site-footer {
+    background-color: #f2f2f2; /* Sfondo grigio */
+    padding: 20px 0;
+    color: #333;
+  }
   
+  .footer-container {
+    display: flex;
+    justify-content: space-around;
+    max-width: 1200px;
+    margin: 0 auto;
+  }
   
+  .footer-column {
+    flex: 1;
+    text-align: center;
+  
+    h3 {
+      font-size: 1.2em;
+      margin-bottom: 10px;
+    }
+  
+    ul {
+      list-style: none;
+      padding: 0;
+  
+      li {
+        margin-bottom: 8px;
+        cursor: pointer;
+  
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+    }
+  }
+  
+  .subscribe-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  
+    input {
+      padding: 8px;
+      margin-bottom: 8px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      width: 200px;
+    }
+  
+    button {
+      padding: 8px 16px;
+      background-color: #007bff;
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+  }
