orange shape sistemato

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -53,7 +53,7 @@ body {
 }
 
 .background-yellow-shape{
-  background-image: url('/orange_shape.png');
+  background-image:('/orange_shape.png');
   background-repeat: no-repeat;
 }
 .cart-item {
