--- a/src/styles.scss
+++ b/src/styles.scss
@@ -255,7 +255,7 @@ input:checked + .slider:before {
   
     button {
       padding: 8px 16px;
-      background-color: #007bff;
+      background-color: #5f7849;
       color: #fff;
       border: none;
       border-radius: 4px;
