--- a/src/components/homepage/Homepage.scss
+++ b/src/components/homepage/Homepage.scss
@@ -1,3 +1,6 @@
+@import "/node_modules/bootstrap/scss/bootstrap";
+
+//GENERAL STYLE
 .App {
   text-align: center;
   margin: auto;
@@ -10,13 +13,40 @@
   flex-wrap: wrap;
 }
 
+.small-descr{
+  font-size: 12px;
+  color: rgb(169, 169, 169);
+}
+
+.link{
+  text-decoration: none;
+  color: #92ce5a;
+  &:hover{
+    color:#689340;
+    text-decoration: underline;
+    transition:0.3s;
+  }
+}
+
+.btn-outline-rasta-yellow{
+  @extend .btn-outline-light;
+  color: #000000;
+  border-color: #000000;
+  &:hover
+  {
+    background-color: #FFE17B;
+    border-color: rgb(32, 32, 32);
+  }
+  
+}
+
+//CARDS
 .flip-card {
   perspective: 1000px;
   width: 200px;
   height: 200px;
   position: relative;
   transform-style: preserve-3d;
-  cursor: pointer;
 }
 
 .flip-card-inner {
@@ -24,6 +54,7 @@
   height: 100%;
   transition: transform 0.6s;
   transform-style: preserve-3d;
+  cursor: pointer;
 }
 
 .flip-card-front,
@@ -36,29 +67,24 @@
   align-items: center;
   justify-content: center;
   overflow: hidden;
-  color: #000000;
+  color: white;
   text-shadow: 
-    -1px -1px 0 #ffffff,  
-     1px -1px 0 #ffffff,
-    -1px  1px 0 #ffffff,
-     1px  1px 0 #ffffff;
+    -1px -1px 0 #000000,  
+     1px -1px 0 #000000,
+    -1px  1px 0 #000000,
+     1px  1px 0 #000000;
 }
 
-/* Assicurati che il contenuto interno non sporga */
 .card-content {
   width: calc(100% - 40px);
-  /* esempio se si vuole un padding */
   height: calc(100% - 40px);
-  /* adatta in base al padding desiderato */
   padding: 20px;
   border-radius: 50%;
   box-sizing: border-box;
-  /* Include padding nel calcolo della dimensione */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  border: solid 1.5px black;
 }
 
 .flip-card-back {
@@ -73,8 +99,7 @@
   transform: rotateY(180deg);
 }
 
-
-//Titolo ad Onda
+//TITOLO CON EFFETTO ONDA
 
 @font-face {
   font-family: Heavitas;
@@ -131,22 +156,22 @@
 .relative-container {
   position: relative;
   width: 300px;
-  height: 400px; /* Imposta un'altezza fissa per il contenitore */
+  height: 400px;
   margin: 0 auto;
 }
 
 .text-on-top {
   z-index: 2;
   position: absolute;
-  top: 50%; /* Sposta il testo al 50% della larghezza del contenitore */
+  top: 50%; 
   left: 50%;
-  transform: translate(-50%, -50%); /* Centra il testo correttamente */
+  transform: translate(-50%, -50%);
 }
 
 .background-image {
   width: 100%;
-  height: 100%; /* Imposta l'altezza dell'immagine al 100% del contenitore */
-  object-fit: cover; /* Evita che l'immagine si deformi */
+  height: 100%; 
+  object-fit: cover; 
   position: absolute;
   top: 0;
   left: 0;
@@ -155,7 +180,7 @@
   margin: 0 auto;
 }
 
-
+//Animazioni Onda
 @-webkit-keyframes an-wave {
   100% {
     background-position-x: -1600px;
@@ -180,6 +205,7 @@
   }
 }
 
+//MEDIA QUERY ONDA (RESPONSIVE)
 @media screen and (max-width: 979px) {
   .ag-maecenas_title {
     font-size: 90px;
@@ -196,7 +222,7 @@
   }
 }
 
-//sezione lista
+//SEZIONE LISTA
 
 .ag-maecenas_box {
   display: flex;
@@ -251,10 +277,9 @@
   margin-left: 20px; /* Aggiunge spazio tra l'immagine e il testo */
 }
 
-/* Assicurati che l'immagine si adatti bene senza distorcere */
 .ag-maecenas_img-box img {
   width: 100%;
-  max-width: 300px; /* Imposta una larghezza massima per l'immagine */
+  max-width: 350px; /* Imposta una larghezza massima per l'immagine */
   height: auto; /* Mantiene le proporzioni dell'immagine */
 }
 
