Proceed to order OK

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -61,6 +61,11 @@ body {
   justify-content: space-between;
 }
 
+.small-msg{
+  font-size: 10px;
+  color: red;
+}
+
 /* Color Palette*/
 
 .bg-rasta-green{
