--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,11 +13,11 @@
 .logo-img{
     cursor: pointer!important;
     width: 60px!important;
+    transition: transform 0.5s ease !important;
 }
 
 .logo-img:hover{
-    filter: brightness(70%)!important;
-    transition: 0.4s!important;
+    transform: scale(1.2,1.2) !important;
 }
 
 .img-overview{
