--- a/src/styles.scss
+++ b/src/styles.scss
@@ -213,11 +213,11 @@ body {
 }
 
 input:checked + .slider {
-  background-color: #2196F3!important;
+  background-color: #6a9145!important;
 }
 
 input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3!important;
+  box-shadow: 0 0 1px #92ce5a!important;
 }
 
 
