--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,305 +1,339 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 @import "../node_modules/bootstrap/scss/bootstrap";
 
-.dark-hover{
-    cursor: pointer!important;
+.dark-hover {
+  cursor: pointer !important;
 }
 
-.dark-hover:hover{
-    filter: blur(90%)!important;
-    transition: 0.4s!important;
+.dark-hover:hover {
+  filter: blur(90%) !important;
+  transition: 0.4s !important;
 }
 
-.logo-img{
-    cursor: pointer!important;
-    width: 60px!important;
-    transition: transform 0.5s ease !important;
+.logo-img {
+  cursor: pointer !important;
+  width: 60px !important;
+  transition: transform 0.5s ease !important;
 }
 
-.logo-img:hover{
-    transform: scale(1.2,1.2) !important;
+.logo-img:hover {
+  transform: scale(1.2, 1.2) !important;
 }
 
-.img-overview{
-    width: 100%!important;
-    max-height: 140px!important;
+.img-overview {
+  width: 100% !important;
+  max-height: 140px !important;
 }
 
-.mt-10{
-    margin-top: 10%!important;
+.mt-10 {
+  margin-top: 10% !important;
 }
 
 body {
-    font-family: "Nunito", sans-serif!important;
-    font-optical-sizing: auto!important;
-    font-weight: 500!important;
-    font-style: normal!important;
-  }
-
-.form-container{
-    max-width: 500px!important;
-    border: solid 1px rgb(0, 0, 0)!important;
-    border-radius: 15px!important;
-}
-.form-container-menu{
-  max-width: 750px!important;
-  border: solid 1px rgb(0, 0, 0)!important;
-  border-radius: 15px!important;
-}
-.small-descr{
-  font-size: 12px!important;
-  color: rgb(169, 169, 169)!important;
+  font-family: "Nunito", sans-serif !important;
+  font-optical-sizing: auto !important;
+  font-weight: 500 !important;
+  font-style: normal !important;
 }
 
-.background-yellow-shape{
-  background-image:('/orange_shape.png')!important;
-  background-repeat: no-repeat!important;
+.form-container {
+  max-width: 500px !important;
+  border: solid 1px rgb(0, 0, 0) !important;
+  border-radius: 15px !important;
 }
+
+.form-container-menu {
+  max-width: 750px !important;
+  border: solid 1px rgb(0, 0, 0) !important;
+  border-radius: 15px !important;
+}
+
+.small-descr {
+  font-size: 12px !important;
+  color: rgb(169, 169, 169) !important;
+}
+
+.background-yellow-shape {
+  background-image: ('/orange_shape.png') !important;
+  background-repeat: no-repeat !important;
+}
+
 .cart-item {
-  display: flex!important;
-  justify-content: space-between!important;
+  display: flex !important;
+  justify-content: space-between !important;
 }
 
 /* Color Palette*/
 
-.bg-rasta-green{
-    background-color: #92ce5a !important;
+.bg-rasta-green {
+  background-color: #92ce5a !important;
 }
 
-.btn-rasta-green{
+.btn-rasta-green {
   @extend .btn-success;
   background-color: #92ce5a !important;
-  &:hover{
+
+  &:hover {
     background-color: #709f44 !important;
   }
 }
 
-.bg-rasta-yellow{
-    background-color: #FFE17B!important;
+.bg-rasta-yellow {
+  background-color: #FFE17B !important;
 }
 
-.btn-rasta-yellow{
+.btn-rasta-yellow {
   @extend .btn-light;
-  background-color: #FFE17B!important;
-  border-color: black!important;
+  background-color: #FFE17B !important;
+  border-color: black !important;
 
-  &:hover
-  {
-    background-color: #cbb263!important;
-    border-color: rgb(32, 32, 32)!important;
+  &:hover {
+    background-color: #cbb263 !important;
+    border-color: rgb(32, 32, 32) !important;
   }
-  
+
 }
 
-.btn-outline-rasta-yellow{
+.btn-outline-rasta-yellow {
   @extend .btn-outline-light;
-  color: #000000!important;
-  border-color: #000000!important;
-  &:hover
-  {
-    background-color: #FFE17B!important;
-    border-color: rgb(32, 32, 32)!important;
+  color: #000000 !important;
+  border-color: #000000 !important;
+
+  &:hover {
+    background-color: #FFE17B !important;
+    border-color: rgb(32, 32, 32) !important;
   }
-  
+
 }
 
-.btn-rasta-navbar{
+.btn-rasta-navbar {
   @extend .btn-light;
-  background-color: #FD8D14 !important; 
+  background-color: #FD8D14 !important;
   border-color: black !important;
   color: black !important;
   border-radius: 28px !important;
-  
-  &:hover{
-    background-color:black !important;
+
+  &:hover {
+    background-color: black !important;
     border-color: #FD8D14 !important;
     color: #FD8D14 !important;
   }
 }
-.bg-rasta-orange{
-    background-color: #FD8D14!important;
+
+.bg-rasta-orange {
+  background-color: #FD8D14 !important;
 }
 
-.btn-outline-rasta-orange{
+.btn-outline-rasta-orange {
   @extend .btn-outline-light;
-  color: #FD8D14!important;
-  border-color: #FD8D14!important;
+  color: #FD8D14 !important;
+  border-color: #FD8D14 !important;
 
-  &:hover
-  {
-    background-color: #FD8D14!important;
-    border-color: white!important;
-    color: white!important;
+  &:hover {
+    background-color: #FD8D14 !important;
+    border-color: white !important;
+    color: white !important;
   }
-  
+
 }
 
-.bg-rasta-red{
-    background-color: #C51605!important;
+.bg-rasta-red {
+  background-color: #C51605 !important;
 }
 
-.text-rasta-green{
-    color: #92ce5a!important;
+.text-rasta-green {
+  color: #92ce5a !important;
 }
 
-.text-rasta-yellow{
-    color: #FFE17B!important;
+.text-rasta-yellow {
+  color: #FFE17B !important;
 }
 
-.text-rasta-orange{
-    color: #FD8D14!important;
+.text-rasta-orange {
+  color: #FD8D14 !important;
 }
 
-.text-rasta-red{
-    color: #C51605!important;
+.text-rasta-red {
+  color: #C51605 !important;
 }
 
 //aggiungi ingredienti
 .btn-group {
-  display: inline-block!important;
+  display: inline-block !important;
 }
 
 .btn-group button {
-  width: 100px!important; /* Larghezza fissa per i bottoni */
-  height: 30px!important; /* Altezza dei bottoni */
-  border: none!important;
-  background-color: #FD8D14!important; /* Colore di sfondo nero */
-  color: #fff!important;
-  font-size: 14px!important; /* Dimensione del carattere ridotta */
+  width: 100px !important;
+  /* Larghezza fissa per i bottoni */
+  height: 30px !important;
+  /* Altezza dei bottoni */
+  border: none !important;
+  background-color: #FD8D14 !important;
+  /* Colore di sfondo nero */
+  color: #fff !important;
+  font-size: 14px !important;
+  /* Dimensione del carattere ridotta */
 }
 
 
 // checkboxes style
 
 .switch {
-  position: relative!important;
-  display: inline-block!important;
-  width: 30px!important; /* Ridotto del 50% */
-  height: 17px!important; /* Ridotto del 50% */
+  position: relative !important;
+  display: inline-block !important;
+  width: 30px !important;
+  /* Ridotto del 50% */
+  height: 17px !important;
+  /* Ridotto del 50% */
 }
 
 /* Hide default HTML checkbox */
 .switch input {
-  opacity: 0!important;
-  width: 0!important;
-  height: 0!important;
+  opacity: 0 !important;
+  width: 0 !important;
+  height: 0 !important;
 }
 
 /* The slider */
 .slider {
-  position: absolute!important;
-  cursor: pointer!important;
-  top: 0!important;
-  left: 0!important;
-  right: 0!important;
-  bottom: 0!important;
-  background-color:white!important;
-  -webkit-transition: .4s!important;
-  transition: .4s!important;
-  border-radius: 17px!important; /* Adattato al 50% della dimensione originale */
+  position: absolute !important;
+  cursor: pointer !important;
+  top: 0 !important;
+  left: 0 !important;
+  right: 0 !important;
+  bottom: 0 !important;
+  background-color: white !important;
+  -webkit-transition: .4s !important;
+  transition: .4s !important;
+  border-radius: 17px !important;
+  /* Adattato al 50% della dimensione originale */
 }
 
 .slider:before {
-  position: absolute!important;
-  content: ""!important;
-  height: 13px!important; /* Ridotto del 50% */
-  width: 13px!important; /* Ridotto del 50% */
-  left: 2px!important; /* Ridotto del 50% */
-  bottom: 2px!important; /* Ridotto del 50% */
-  background-color: #92ce5a!important; /* Colore desiderato */
-  -webkit-transition: .4s!important;
-  transition: .4s!important;
-  border-radius: 50%!important; /* Adattato al 50% della dimensione originale */
+  position: absolute !important;
+  content: "" !important;
+  height: 13px !important;
+  /* Ridotto del 50% */
+  width: 13px !important;
+  /* Ridotto del 50% */
+  left: 2px !important;
+  /* Ridotto del 50% */
+  bottom: 2px !important;
+  /* Ridotto del 50% */
+  background-color: #92ce5a !important;
+  /* Colore desiderato */
+  -webkit-transition: .4s !important;
+  transition: .4s !important;
+  border-radius: 50% !important;
+  /* Adattato al 50% della dimensione originale */
 }
 
-input:checked + .slider {
-  background-color: #2196F3!important;
+input:checked+.slider {
+  background-color: #2196F3 !important;
 }
 
-input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3!important;
+input:focus+.slider {
+  box-shadow: 0 0 1px #2196F3 !important;
 }
 
 
-input:checked + .slider:before {
-  -webkit-transform: translateX(13px)!important; /* Ridotto del 50% */
-  -ms-transform: translateX(13px)!important; /* Ridotto del 50% */
-  transform: translateX(13px)!important; /* Ridotto del 50% */
+input:checked+.slider:before {
+  -webkit-transform: translateX(13px) !important;
+  /* Ridotto del 50% */
+  -ms-transform: translateX(13px) !important;
+  /* Ridotto del 50% */
+  transform: translateX(13px) !important;
+  /* Ridotto del 50% */
 }
 
 
 //range
 /* Colore del cursore del range */
 .form-range::-webkit-slider-thumb {
-  background-color: #92ce5a !important; /* Imposta il colore desiderato */
+  background-color: #92ce5a !important;
+  /* Imposta il colore desiderato */
 }
 
 .form-range::-moz-range-thumb {
-  background-color: white!important; /* Imposta il colore desiderato */
+  background-color: white !important;
+  /* Imposta il colore desiderato */
 }
 
 .form-range::-ms-thumb {
-  background-color: #92ce5a!important; /* Imposta il colore desiderato */
+  background-color: #92ce5a !important;
+  /* Imposta il colore desiderato */
 }
 
 
 /*Stile Footer*/
 
 .site-footer {
-    background-color: #92ce5a!important; 
-    padding: 20px 0!important;
-    color: #333!important;
-  }
-.bg-footer-hover{
+  background-color: #92ce5a !important;
+  padding: 20px 0 !important;
+  color: #333 !important;
+}
+
+.bg-footer-hover {
   @extend .site-footer;
-  &:hover{
-    background-color: #6c9645!important;
+
+  &:hover {
+    background-color: #6c9645 !important;
   }
 }
-  
-  .footer-container {
-    display: flex!important;
-    justify-content: space-around!important;
-    max-width: 1200px!important;
-    margin: 0 auto!important;
+
+.footer-container {
+  display: flex !important;
+  justify-content: space-around !important;
+  max-width: 1200px !important;
+  margin: 0 auto !important;
+}
+
+.footer-column {
+  flex: 1 !important;
+  text-align: center !important;
+
+  h3 {
+    font-size: 1.2em !important;
+    margin-bottom: 10px !important;
   }
-  
-  .footer-column {
-    flex: 1!important;
-    text-align: center!important;
-  
-    h3 {
-      font-size: 1.2em!important;
-      margin-bottom: 10px!important;
-    }
-  
-    ul {
-      list-style: none!important;
-      padding: 0!important;
-  
-      li {
-        margin-bottom: 8px!important;
-        color: rgb(77, 77, 77)!important;
-        font-size: 12px!important;
-        cursor: pointer!important;
-  
-        &:hover {
-          text-decoration: underline!important;
-        }
+
+  ul {
+    list-style: none !important;
+    padding: 0 !important;
+
+    li {
+      margin-bottom: 8px !important;
+      color: rgb(77, 77, 77) !important;
+      font-size: 12px !important;
+      cursor: pointer !important;
+
+      &:hover {
+        text-decoration: underline !important;
       }
     }
   }
-  
-  .subscribe-form {
-    display: flex!important;
-    flex-direction: column!important;
-    align-items: center!important;
-  
-    input {
-      padding: 8px!important;
-      margin-bottom: 8px!important;
-      border: 1px solid #ccc!important;
-      border-radius: 4px!important;
-      width: 200px!important;
-    }
+}
+
+.footer-column a {
+  color: rgb(77, 77, 77) !important;
+  text-decoration: none !important;
+}
+
+.footer-column a:hover {
+  color: rgb(36, 36, 36) !important;
+  text-decoration: underline !important;
+}
+
+.subscribe-form {
+  display: flex !important;
+  flex-direction: column !important;
+  align-items: center !important;
+
+  input {
+    padding: 8px !important;
+    margin-bottom: 8px !important;
+    border: 1px solid #ccc !important;
+    border-radius: 4px !important;
+    width: 200px !important;
   }
+}
