--- a/src/styles.scss
+++ b/src/styles.scss
@@ -135,7 +135,7 @@ body {
     border-color: white !important;
     color: white !important;
   }
-
+  
 }
 
 .bg-rasta-red {
@@ -174,6 +174,16 @@ body {
   color: #fff !important;
   font-size: 14px !important;
   /* Dimensione del carattere ridotta */
+  &:hover {
+    cursor: pointer;
+  }
+
+  
+}
+
+.btn-check-ingre{
+  @extend .btn-check;
+  background-color: #FD8D14 !important;
 }
 
 
